instance1/temp-retrieve/objects/Related_Opp_Transaction__c/Related_Opp_Transaction__c.object-meta.xml
<CustomObject>
    <description>Joined object</description>
    <label>Related Opp Transaction</label>
    <nameField>
        <displayFormat>ROP-{0000000000}</displayFormat>
        <label>Related Opp Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opp Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>