instance1/temp-retrieve/objects/Related_Opp_Transaction__c/fields/Admin_Update__c.field-meta.xml
<CustomField>
    <fullName>Admin_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Update</label>
    <type>Checkbox</type>
</CustomField>