instance1/temp-retrieve/objects/Related_Opp_Transaction__c/fields/Related_Chargent_Order_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Related_Chargent_Order_Payment_Received__c</fullName>
    <formula>TEXT(Related_Transaction__r.ChargentOrders__Order__r.ChargentOrders__Payment_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Chargent Order Payment Received</label>
    <type>Text</type>
</CustomField>