instance1/temp-retrieve/objects/Related_Opp_Transaction__c/fields/Transaction_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Payment_Method__c</fullName>
    <formula>TEXT(Related_Transaction__r.ChargentOrders__Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Payment Method</label>
    <type>Text</type>
</CustomField>