instance1/temp-retrieve/objects/Related_Opp_Transaction__c/fields/Transaction_Related_Chargent_Order__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Related_Chargent_Order__c</fullName>
    <formula>Related_Transaction__r.ChargentOrders__Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Related Chargent Order</label>
    <type>Text</type>
</CustomField>