instance1/temp-retrieve/objects/Related_Opp_Transaction__c/listViews/All_Related_Opp_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Related_Opp_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Opp_Business_Type__c</columns>
    <columns>Opportunity_Account_Name__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Gateway_Date__c</columns>
    <columns>Transaction_Payment_Method__c</columns>
    <columns>Transaction_Related_Chargent_Order__c</columns>
    <columns>Transaction_Response_Status__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Related_Chargent_Order_Payment_Received__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Related_Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <label>All Related Opp Transactions</label>
</ListView>